Image Parrallax Example

--- a/Parallax Effect in JavaScript/index.html
+++ b/Parallax Effect in JavaScript/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    <h1>
-        hello
-    </h1>
+ <header id="banner" class= "banner">
+   <h1 id="h1">Best for Cover Image - Not styled</h1>
+   <button id="button">
+     Get stared
+   </button>
+ </header>
+  <section class="container"> <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam voluptatem harum accusamus voluptas modi in beatae sed excepturi totam facere enim, magni sapiente accusantium animi cum! Rerum natus asperiores eaque sit labore earum odio magnam et quis at. Quisquam, nam? <br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto harum voluptatem exercitationem blanditiis sequi, veniam minus ab commodi excepturi adipisci, earum illum porro vero ullam consequuntur beatae voluptate amet ratione veritatis deleniti labore. Voluptates sit nemo commodi eaque quis! Quidem. <br><br>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae magnam sapiente error blanditiis ipsum rem, qui dicta consectetur! Necessitatibus nemo excepturi unde numquam laboriosam tenetur libero ab. Illo voluptate ducimus dolorum eveniet! Voluptatum laborum corporis, ullam id eaque modi quae, dignissimos aut tempore odit ducimus atque est fuga cumque ut officiis aliquam. Modi facilis consequatur necessitatibus! Fugit asperiores facilis aliquid tempore beatae, quia, quibusdam culpa ad, officiis perspiciatis deserunt quisquam. Modi, ipsum. Labore, laudantium esse? Sunt cum qui obcaecati molestias pariatur veritatis blanditiis, cumque, itaque ducimus perferendis explicabo esse recusandae! <br><br>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, deserunt! Mollitia, nesciunt. Unde veniam reiciendis, omnis dolores eum quia a. <br><br>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam voluptatem harum accusamus voluptas modi in beatae sed excepturi totam facere enim, magni sapiente accusantium animi cum! Rerum natus asperiores eaque sit labore earum odio magnam et quis at. Quisquam, nam? <br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto harum voluptatem exercitationem blanditiis sequi, veniam minus ab commodi excepturi adipisci, earum illum porro vero ullam consequuntur beatae voluptate amet ratione veritatis deleniti labore. Voluptates sit nemo commodi eaque quis! Quidem. <br><br>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae magnam sapiente error blanditiis ipsum rem, qui dicta consectetur! Necessitatibus nemo excepturi unde numquam laboriosam tenetur libero ab. Illo voluptate ducimus dolorum eveniet! Voluptatum laborum corporis, ullam id eaque modi quae, dignissimos aut tempore odit ducimus atque est fuga cumque ut officiis aliquam. Modi facilis consequatur necessitatibus! Fugit asperiores facilis aliquid tempore beatae, quia, quibusdam culpa ad, officiis perspiciatis deserunt quisquam. Modi, ipsum. Labore, laudantium esse? Sunt cum qui obcaecati molestias pariatur veritatis blanditiis, cumque, itaque ducimus perferendis explicabo esse recusandae! <br><br>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, deserunt! Mollitia, nesciunt. Unde veniam reiciendis, omnis dolores eum quia a. <br><br>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam voluptatem harum accusamus voluptas modi in beatae sed excepturi totam facere enim, magni sapiente accusantium animi cum! Rerum natus asperiores eaque sit labore earum odio magnam et quis at. Quisquam, nam? <br><br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto harum voluptatem exercitationem blanditiis sequi, veniam minus ab commodi excepturi adipisci, earum illum porro vero ullam consequuntur beatae voluptate amet ratione veritatis deleniti labore. Voluptates sit nemo commodi eaque quis! Quidem. <br><br>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae magnam sapiente error blanditiis ipsum rem, qui dicta consectetur! Necessitatibus nemo excepturi unde numquam laboriosam tenetur libero ab. Illo voluptate ducimus dolorum eveniet! Voluptatum laborum corporis, ullam id eaque modi quae, dignissimos aut tempore odit ducimus atque est fuga cumque ut officiis aliquam. Modi facilis consequatur necessitatibus! Fugit asperiores facilis aliquid tempore beatae, quia, quibusdam culpa ad, officiis perspiciatis deserunt quisquam. Modi, ipsum. Labore, laudantium esse? Sunt cum qui obcaecati molestias pariatur veritatis blanditiis, cumque, itaque ducimus perferendis explicabo esse recusandae! <br><br>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum, deserunt! Mollitia, nesciunt. Unde veniam reiciendis, omnis dolores eum quia a. <br><br>
+
+</p></section>
+
 </body>
+
 </html>
+
+
+  <script src="script.js"></script>
+  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
